    * DomDocumentFactoryBean is now DOMDocumentFactoryBean
    * DOMDocumentFactoryBean documentResource property is now resource
    * New classes supporting the Metadata Query Protocol:
        * ItemIdTransformStage
        * MDQueryMD5ItemIdTransformer
        * MDQuerySAML1ItemIdTransformer

** Bug
    * [MDA-130] - NPE in DOMResourceStage if resource reading fails

** New Feature
    * [JSE-1] - change factory beans to operate on resources, not files
    * [MDA-132] - generic conditional execution of stages
    * [MDA-139] - add stage implementing ItemId transformations for metadata query

** Improvements
    * [JSE-4] - DomDocumentFactoryBean should be renamed

** Task
    * [MDA-122] - remove unimplemented stages and properties
    * [MDA-124] - Move from using Shibboleth resources to using Spring ones
    * [MDA-125] - can't set some properties on XMLSignatureValidationStage from
                  Spring configurations
    * [MDA-127] - simplify output from StatusMetadataLoggingStage
    * [MDA-128] - use @Override annotation in MDA sources
    * [MDA-129] - remove semi-functional ElementFormattingStage
    * [MDA-133] - unbundle "endorsed" libraries from distribution
    * [MDA-134] - refactor approach to serialisation


Release Notes - Metadata Aggregator - Version 0.8.0
===================================================

Highlights
   * API changes for new Shibboleth coding conventions, and in the
     use of generic types
   * Signature validation can reject empty references, blacklist
     algorithm URIs and protects against "wrapping" attacks.
   * New stage to extract MDRPI registrationInfo into item metadata.
   * Moved to Java 7, Apache Santuario V1.5
   * Improved CLI experience
   * bug fixes

   
API Changes
   * DomElementItem becomes DOMElementItem
   * DomElementSerializer becomes DOMElementSerializer
   * DomFilesystemSourceStage becomes DOMFilesystemSourceStage
   * DomResourceSourceStage becomes DOMResourceSourceStage